<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/home_top_image"
                tools:layout_editor_absoluteY="0dp"
                android:contentDescription="@string/home_image_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/button2"
                    style="@style/LightButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/register" />

                <Button
                    android:id="@+id/button"
                    style="@style/LightButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_border"
                    android:text="@string/sign_in" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/popular_products"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/popular_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" >

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/latest_products"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/latest_products"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:nestedScrollingEnabled="true"
                android:scrollbars="none" >

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>