<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNeutral"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:elevation="30dp"
            android:padding="20dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/custom_button_dark"
                    android:foregroundGravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:onClick="signIn"/>

                <Button
                    android:id="@+id/textView4"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/white"
                    android:text="@string/forgot_your_password"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:onClick="forgotPassword"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_button_border"
                    android:drawableStart="@drawable/ic_google_plus_symbol"
                    android:drawableTint="@color/colorAccent"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/colorAccent"
                    android:onClick="continueGoogle"/>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_button_border"
                    android:drawableStart="@drawable/ic_facebook_logo"
                    android:drawableTint="@color/colorAccent"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/continue_with_facebook"
                    android:textColor="@color/colorAccent"
                    android:onClick="continueFacebook"/>

                <Button
                    android:id="@+id/textView5"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/white"
                    android:text="@string/dont_have_an_account_register"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:onClick="registerCall"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</android.support.constraint.ConstraintLayout>